--- a/vs.tex
+++ b/vs.tex
@@ -13,7 +13,7 @@
 
 \chapter{1VS}
 \section*{First}
-The {\textit{first document} is included in here with the following statement.My first document prepare in Latex.My first document prepare in Latex.My first document prepare in LatexMy first document prepare in LatexMy first document prepare in LatexMy first document prepare in LatexMy first document prepare in Latex My first document prepare in LatexMy first document prepare in LatexMy first document prepare in Latex
+The {\textit{first document} is included in here with the following statement.My first document prepare in Latex.
 \subsection*{A}
 \subsubsection{a}
 
